--- a/client/src/pages/PriceSelection.css
+++ b/client/src/pages/PriceSelection.css
@@ -122,3 +122,24 @@
     color: white;
   }
   
+  .total-price {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.quantity-warning-box {
+  background-color: #fff5f5;
+  color: #d32f2f;
+  border: 1px solid #f5c6cb;
+  padding: 12px 16px;
+  border-radius: 6px;
+  font-size: 14px;
+  margin-top: 16px;
+  display: inline-block;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.05);
+}
+
+.right-shifted {
+  margin-left: 76.5%; 
+}
