--- a/client/src/pages/EventDetail.css
+++ b/client/src/pages/EventDetail.css
@@ -17,11 +17,10 @@ body {
   background-color: white;
 }
 
-/* 왼쪽 영역 */
 .left {
   flex: 2;
   border-right: 1px solid #ddd;
-  padding: 0 80px 0 100px; /* ✅ 왼쪽 여백 증가 */
+  padding: 0 80px 0 100px; 
 }
 
 .concert-title {
@@ -162,6 +161,6 @@ body {
 .right.disabled .reserve-btn,
 .right.disabled .booking-btn {
   cursor: not-allowed;
-  pointer-events: auto;  /* 클릭 막히는 건 JSX에서 disabled로 처리 */
+  pointer-events: auto; 
   opacity: 0.6;
 }
